Se implementó la configuración dinámica del sistema, el cálculo real del avance institucional, la matriz de riesgos, la validación FURAG y el fortalecimiento de permisos y reportes con datos administrables desde base de datos