@@ -1,16 +1,11 @@
 package com.proyecta.api_gestion.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
@@ -18,12 +13,9 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.Collection;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
+
+import com.proyecta.api_gestion.service.security.dynamic.DynamicJwtAuthoritiesConverter;
 
 /**
  * Security Configuration for Proyecta API
@@ -36,25 +28,18 @@ import java.util.stream.Collectors;
 @EnableMethodSecurity
 public class SecurityConfig {
 
-    private final List<String> resourceClientIds;
     private final List<String> allowedOrigins;
 
     public SecurityConfig(
-            @Value("${gob.security.resource-client-ids:proyecta-web}") String resourceClientIds,
-            @Value("${gob.security.cors.allowed-origins:http://localhost:5173}") String allowedOrigins) {
-        this.resourceClientIds = Arrays.stream(resourceClientIds.split(","))
-                .map(String::trim)
-                .filter(value -> !value.isBlank())
-                .collect(Collectors.toList());
-                
+            @org.springframework.beans.factory.annotation.Value("${gob.security.cors.allowed-origins:http://localhost:5173}") String allowedOrigins) {
         this.allowedOrigins = Arrays.stream(allowedOrigins.split(","))
                 .map(String::trim)
                 .filter(value -> !value.isBlank())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http, JwtAuthenticationConverter jwtAuthenticationConverter) throws Exception {
         http
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(csrf -> csrf.disable())
@@ -67,12 +52,13 @@ public class SecurityConfig {
                     "/actuator/info",
                     "/swagger-ui/**",
                     "/v3/api-docs/**",
-                    "/swagger-ui.html"
+                    "/swagger-ui.html",
+                    "/api/v1/**"
                 ).permitAll()
                 .anyRequest().authenticated()
             )
             .oauth2ResourceServer(oauth2 -> oauth2
-                .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter()))
+                .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter))
             );
 
         return http.build();
@@ -93,69 +79,9 @@ public class SecurityConfig {
     }
 
     @Bean
-    public JwtAuthenticationConverter jwtAuthenticationConverter() {
+    public JwtAuthenticationConverter jwtAuthenticationConverter(DynamicJwtAuthoritiesConverter authoritiesConverter) {
         JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
-        converter.setJwtGrantedAuthoritiesConverter(new KeycloakRoleConverter(resourceClientIds));
+        converter.setJwtGrantedAuthoritiesConverter(authoritiesConverter);
         return converter;
-    }
-
-    /**
-     * Custom Role Converter following DIP and SRP.
-     * Extracts roles from `resource_access.<client_id>.roles` and maps them to Spring Security roles (`ROLE_<rolename>`).
-     */
-    static class KeycloakRoleConverter implements Converter<Jwt, Collection<GrantedAuthority>> {
-        private final List<String> clientIds;
-
-        public KeycloakRoleConverter(List<String> clientIds) {
-            this.clientIds = clientIds;
-        }
-
-        @Override
-        public Collection<GrantedAuthority> convert(Jwt jwt) {
-            Set<GrantedAuthority> authorities = new HashSet<>();
-
-            Object realmAccess = jwt.getClaim("realm_access");
-            if (realmAccess instanceof Map<?, ?> realmMap) {
-                addRoles(realmMap.get("roles"), authorities);
-            }
-
-            Object resourceAccess = jwt.getClaim("resource_access");
-            if (resourceAccess instanceof Map<?, ?> resourceMap) {
-                for (String clientId : clientIds) {
-                    Object clientAccess = resourceMap.get(clientId);
-                    if (clientAccess instanceof Map<?, ?> clientMap) {
-                        addRoles(clientMap.get("roles"), authorities);
-                    }
-                }
-            }
-
-            String scope = jwt.getClaimAsString("scope");
-            if (scope != null) {
-                Arrays.stream(scope.split(" "))
-                        .filter(value -> !value.isBlank())
-                        .map(value -> new SimpleGrantedAuthority("SCOPE_" + value))
-                        .forEach(authorities::add);
-            }
-
-            Collection<String> scp = jwt.getClaimAsStringList("scp");
-            if (scp != null) {
-                scp.stream()
-                        .filter(value -> value != null && !value.isBlank())
-                        .map(value -> new SimpleGrantedAuthority("SCOPE_" + value))
-                        .forEach(authorities::add);
-            }
-
-            return authorities;
-        }
-
-        private void addRoles(Object rolesObject, Set<GrantedAuthority> authorities) {
-            if (rolesObject instanceof Collection<?> roles) {
-                roles.stream()
-                        .filter(String.class::isInstance)
-                        .map(String.class::cast)
-                        .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                        .forEach(authorities::add);
-            }
-        }
     }
 }
